Add css to header and side bar + subrouts for mail

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <link rel="stylesheet" href="lib/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
     <title>Starter App</title>
   </head>
 
