--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <script src="lib/history.js"></script>
     <script src="lib/react-router.js"></script>
     <script src="lib/react-router-dom.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="lib/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
